<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity"
    android:layout_margin="12dp">
    <TextView
        android:id="@+id/congratulationsTextView"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scoreContainer"
        android:textAlignment="center"
        android:text="@string/congratulations"
        />
    <LinearLayout
        android:id="@+id/scoreContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/congratulationsTextView"
        app:layout_constraintBottom_toTopOf="@id/scoreButtonContainer"
        android:orientation="vertical"
        >
    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/congratulationsTextView"
        app:layout_constraintBottom_toTopOf="@id/score"
        android:text="@string/score_label"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/scoreLabel"
        app:layout_constraintBottom_toTopOf="@id/scoreButtonContainer"
        android:text="@string/score"
        android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/scoreButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/scoreContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        >
    <Button
        android:id="@+id/newQuizButton"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/new_quiz_button"
        android:textAlignment="center"
        android:onClick="resetQuiz"/>
        <Button
            android:id="@+id/finishButton"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/finish_button"
            android:textAlignment="center"
            android:onClick="closeApp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>